fixed router.....made card on home....trying to adjust image but time has never been on my side....my invisible enemy

--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,7 @@ body{
     linear-gradient(90deg, rgb(0,0,0),rgb(0,0,0));
     color: white;
 }
+.card{
+    border: 1px solid;
+    border-color: rgba(255, 255, 255, 0.3);
+}
